fixed code to make it more readable

--- a/public/css/huidigePokemon.css
+++ b/public/css/huidigePokemon.css
@@ -206,6 +206,12 @@ td:nth-child(2)::after {
   margin-top: 0;
 }
 
+input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 @media all and (max-width: 700px) {
   .hp_Container {
     display: flex;
@@ -225,7 +231,7 @@ td:nth-child(2)::after {
     padding: 0px;
   }
 
-  .evoImg img{
+  .evoImg img {
     height: 110px;
     width: 110px;
     margin-bottom: 10px;
